targets/pim_fused/codegen-generator/Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CASE
    CASE_HEADER
    COMMENT
    DE
    DO
    DOT
    DOWNTO
    ESAC
    LBRACKET
    MATRIX_DIM
    MATRIX_ROW
    NEG
    OD
    OF
    OR_EQUAL
    PSEUDO
    RBRACKET
    RETURN
    SEMICOLON
    TO
    WHILE

Grammar

Rule 0     S' -> stmts
Rule 1     stmts -> stmt
Rule 2     stmts -> stmts stmt
Rule 3     stmt -> DEFINE ID LPAREN args RPAREN COLON stmts
Rule 4     stmt -> BREAK
Rule 5     stmt -> expr
Rule 6     expr -> expr UPDATE expr
Rule 7     expr -> expr PLUS_EQUAL expr
Rule 8     stmt -> FOR ID IN RANGE LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN COLON stmts ENDFOR
Rule 9     stmt -> IF expr THEN stmts FI
Rule 10    stmt -> IF expr THEN stmts ELSE stmts FI
Rule 11    stmt -> IF expr FI
Rule 12    stmt -> IF expr THEN stmts ELSEIF expr THEN stmts ELSE stmts FI
Rule 13    stmt -> IF expr stmts FI
Rule 14    stmt -> IF expr stmts ELSE stmts FI
Rule 15    stmt -> IF expr stmts ELSE stmts
Rule 16    expr -> ID LPAREN args RPAREN
Rule 17    expr -> ID LPAREN RPAREN
Rule 18    args -> expr
Rule 19    args -> args COMMA expr
Rule 20    expr -> expr LBRACE expr RBRACE
Rule 21    expr -> expr LBRACE expr COLON expr RBRACE
Rule 22    expr -> expr QUEST expr COLON expr
Rule 23    expr -> NOT expr
Rule 24    expr -> MINUS expr
Rule 25    expr -> BITWISE_NOT expr
Rule 26    expr -> expr BITWISE_AND expr
Rule 27    expr -> expr BITWISE_OR expr
Rule 28    expr -> expr OP expr
Rule 29    expr -> expr PLUS expr
Rule 30    expr -> expr MINUS expr
Rule 31    expr -> expr TIMES expr
Rule 32    expr -> expr DIV expr
Rule 33    expr -> expr MOD expr
Rule 34    expr -> expr AND expr
Rule 35    expr -> expr OR expr
Rule 36    expr -> expr LSHIFT expr
Rule 37    expr -> expr RSHIFT expr
Rule 38    expr -> expr LSHIFT_LOGICAL expr
Rule 39    expr -> expr RSHIFT_LOGICAL expr
Rule 40    expr -> expr GREATER expr
Rule 41    expr -> expr LESS expr
Rule 42    expr -> expr LESS_EQUAL expr
Rule 43    expr -> expr GREATER_EQUAL expr
Rule 44    expr -> expr EQUAL expr
Rule 45    expr -> expr NOT_EQUAL expr
Rule 46    expr -> expr XOR expr
Rule 47    expr -> LPAREN expr RPAREN
Rule 48    expr -> ID
Rule 49    expr -> NUMBER

Terminals, with rules where they appear

AND                  : 34
BITWISE_AND          : 26
BITWISE_NOT          : 25
BITWISE_OR           : 27
BREAK                : 4
CASE                 : 
CASE_HEADER          : 
COLON                : 3 8 21 22
COMMA                : 8 8 19
COMMENT              : 
DE                   : 
DEFINE               : 3
DIV                  : 32
DO                   : 
DOT                  : 
DOWNTO               : 
ELSE                 : 10 12 14 15
ELSEIF               : 12
ENDFOR               : 8
EQUAL                : 44
ESAC                 : 
FI                   : 9 10 11 12 13 14
FOR                  : 8
GREATER              : 40
GREATER_EQUAL        : 43
ID                   : 3 8 16 17 48
IF                   : 9 10 11 12 13 14 15
IN                   : 8
LBRACE               : 20 21
LBRACKET             : 
LESS                 : 41
LESS_EQUAL           : 42
LPAREN               : 3 8 16 17 47
LSHIFT               : 36
LSHIFT_LOGICAL       : 38
MATRIX_DIM           : 
MATRIX_ROW           : 
MINUS                : 24 30
MOD                  : 33
NEG                  : 
NOT                  : 23
NOT_EQUAL            : 45
NUMBER               : 8 8 8 49
OD                   : 
OF                   : 
OP                   : 28
OR                   : 35
OR_EQUAL             : 
PLUS                 : 29
PLUS_EQUAL           : 7
PSEUDO               : 
QUEST                : 22
RANGE                : 8
RBRACE               : 20 21
RBRACKET             : 
RETURN               : 
RPAREN               : 3 8 16 17 47
RSHIFT               : 37
RSHIFT_LOGICAL       : 39
SEMICOLON            : 
THEN                 : 9 10 12 12
TIMES                : 31
TO                   : 
UPDATE               : 6
WHILE                : 
XOR                  : 46
error                : 

Nonterminals, with rules where they appear

args                 : 3 16 19
expr                 : 5 6 6 7 7 9 10 11 12 12 13 14 15 18 19 20 20 21 21 21 22 22 22 23 24 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47
stmt                 : 1 2
stmts                : 2 3 8 9 10 10 12 12 12 13 14 14 15 15 0

Parsing method: LALR

state 0

    (0) S' -> . stmts
    (1) stmts -> . stmt
    (2) stmts -> . stmts stmt
    (3) stmt -> . DEFINE ID LPAREN args RPAREN COLON stmts
    (4) stmt -> . BREAK
    (5) stmt -> . expr
    (8) stmt -> . FOR ID IN RANGE LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN COLON stmts ENDFOR
    (9) stmt -> . IF expr THEN stmts FI
    (10) stmt -> . IF expr THEN stmts ELSE stmts FI
    (11) stmt -> . IF expr FI
    (12) stmt -> . IF expr THEN stmts ELSEIF expr THEN stmts ELSE stmts FI
    (13) stmt -> . IF expr stmts FI
    (14) stmt -> . IF expr stmts ELSE stmts FI
    (15) stmt -> . IF expr stmts ELSE stmts
    (6) expr -> . expr UPDATE expr
    (7) expr -> . expr PLUS_EQUAL expr
    (16) expr -> . ID LPAREN args RPAREN
    (17) expr -> . ID LPAREN RPAREN
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . expr LBRACE expr COLON expr RBRACE
    (22) expr -> . expr QUEST expr COLON expr
    (23) expr -> . NOT expr
    (24) expr -> . MINUS expr
    (25) expr -> . BITWISE_NOT expr
    (26) expr -> . expr BITWISE_AND expr
    (27) expr -> . expr BITWISE_OR expr
    (28) expr -> . expr OP expr
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIV expr
    (33) expr -> . expr MOD expr
    (34) expr -> . expr AND expr
    (35) expr -> . expr OR expr
    (36) expr -> . expr LSHIFT expr
    (37) expr -> . expr RSHIFT expr
    (38) expr -> . expr LSHIFT_LOGICAL expr
    (39) expr -> . expr RSHIFT_LOGICAL expr
    (40) expr -> . expr GREATER expr
    (41) expr -> . expr LESS expr
    (42) expr -> . expr LESS_EQUAL expr
    (43) expr -> . expr GREATER_EQUAL expr
    (44) expr -> . expr EQUAL expr
    (45) expr -> . expr NOT_EQUAL expr
    (46) expr -> . expr XOR expr
    (47) expr -> . LPAREN expr RPAREN
    (48) expr -> . ID
    (49) expr -> . NUMBER

    DEFINE          shift and go to state 3
    BREAK           shift and go to state 6
    FOR             shift and go to state 8
    IF              shift and go to state 10
    ID              shift and go to state 4
    NOT             shift and go to state 11
    MINUS           shift and go to state 12
    BITWISE_NOT     shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 9

    stmts                          shift and go to state 1
    stmt                           shift and go to state 2
    expr                           shift and go to state 7

state 1

    (0) S' -> stmts .
    (2) stmts -> stmts . stmt
    (3) stmt -> . DEFINE ID LPAREN args RPAREN COLON stmts
    (4) stmt -> . BREAK
    (5) stmt -> . expr
    (8) stmt -> . FOR ID IN RANGE LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN COLON stmts ENDFOR
    (9) stmt -> . IF expr THEN stmts FI
    (10) stmt -> . IF expr THEN stmts ELSE stmts FI
    (11) stmt -> . IF expr FI
    (12) stmt -> . IF expr THEN stmts ELSEIF expr THEN stmts ELSE stmts FI
    (13) stmt -> . IF expr stmts FI
    (14) stmt -> . IF expr stmts ELSE stmts FI
    (15) stmt -> . IF expr stmts ELSE stmts
    (6) expr -> . expr UPDATE expr
    (7) expr -> . expr PLUS_EQUAL expr
    (16) expr -> . ID LPAREN args RPAREN
    (17) expr -> . ID LPAREN RPAREN
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . expr LBRACE expr COLON expr RBRACE
    (22) expr -> . expr QUEST expr COLON expr
    (23) expr -> . NOT expr
    (24) expr -> . MINUS expr
    (25) expr -> . BITWISE_NOT expr
    (26) expr -> . expr BITWISE_AND expr
    (27) expr -> . expr BITWISE_OR expr
    (28) expr -> . expr OP expr
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIV expr
    (33) expr -> . expr MOD expr
    (34) expr -> . expr AND expr
    (35) expr -> . expr OR expr
    (36) expr -> . expr LSHIFT expr
    (37) expr -> . expr RSHIFT expr
    (38) expr -> . expr LSHIFT_LOGICAL expr
    (39) expr -> . expr RSHIFT_LOGICAL expr
    (40) expr -> . expr GREATER expr
    (41) expr -> . expr LESS expr
    (42) expr -> . expr LESS_EQUAL expr
    (43) expr -> . expr GREATER_EQUAL expr
    (44) expr -> . expr EQUAL expr
    (45) expr -> . expr NOT_EQUAL expr
    (46) expr -> . expr XOR expr
    (47) expr -> . LPAREN expr RPAREN
    (48) expr -> . ID
    (49) expr -> . NUMBER

    DEFINE          shift and go to state 3
    BREAK           shift and go to state 6
    FOR             shift and go to state 8
    IF              shift and go to state 10
    ID              shift and go to state 4
    NOT             shift and go to state 11
    MINUS           shift and go to state 12
    BITWISE_NOT     shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 9

    stmt                           shift and go to state 14
    expr                           shift and go to state 7

state 2

    (1) stmts -> stmt .

    DEFINE          reduce using rule 1 (stmts -> stmt .)
    BREAK           reduce using rule 1 (stmts -> stmt .)
    FOR             reduce using rule 1 (stmts -> stmt .)
    IF              reduce using rule 1 (stmts -> stmt .)
    ID              reduce using rule 1 (stmts -> stmt .)
    NOT             reduce using rule 1 (stmts -> stmt .)
    MINUS           reduce using rule 1 (stmts -> stmt .)
    BITWISE_NOT     reduce using rule 1 (stmts -> stmt .)
    LPAREN          reduce using rule 1 (stmts -> stmt .)
    NUMBER          reduce using rule 1 (stmts -> stmt .)
    $end            reduce using rule 1 (stmts -> stmt .)
    FI              reduce using rule 1 (stmts -> stmt .)
    ELSE            reduce using rule 1 (stmts -> stmt .)
    ELSEIF          reduce using rule 1 (stmts -> stmt .)
    ENDFOR          reduce using rule 1 (stmts -> stmt .)


state 3

    (3) stmt -> DEFINE . ID LPAREN args RPAREN COLON stmts

    ID              shift and go to state 15


state 4

    (16) expr -> ID . LPAREN args RPAREN
    (17) expr -> ID . LPAREN RPAREN
    (48) expr -> ID .

  ! shift/reduce conflict for LPAREN resolved as shift
    LPAREN          shift and go to state 16
    UPDATE          reduce using rule 48 (expr -> ID .)
    PLUS_EQUAL      reduce using rule 48 (expr -> ID .)
    LBRACE          reduce using rule 48 (expr -> ID .)
    QUEST           reduce using rule 48 (expr -> ID .)
    BITWISE_AND     reduce using rule 48 (expr -> ID .)
    BITWISE_OR      reduce using rule 48 (expr -> ID .)
    OP              reduce using rule 48 (expr -> ID .)
    PLUS            reduce using rule 48 (expr -> ID .)
    MINUS           reduce using rule 48 (expr -> ID .)
    TIMES           reduce using rule 48 (expr -> ID .)
    DIV             reduce using rule 48 (expr -> ID .)
    MOD             reduce using rule 48 (expr -> ID .)
    AND             reduce using rule 48 (expr -> ID .)
    OR              reduce using rule 48 (expr -> ID .)
    LSHIFT          reduce using rule 48 (expr -> ID .)
    RSHIFT          reduce using rule 48 (expr -> ID .)
    LSHIFT_LOGICAL  reduce using rule 48 (expr -> ID .)
    RSHIFT_LOGICAL  reduce using rule 48 (expr -> ID .)
    GREATER         reduce using rule 48 (expr -> ID .)
    LESS            reduce using rule 48 (expr -> ID .)
    LESS_EQUAL      reduce using rule 48 (expr -> ID .)
    GREATER_EQUAL   reduce using rule 48 (expr -> ID .)
    EQUAL           reduce using rule 48 (expr -> ID .)
    NOT_EQUAL       reduce using rule 48 (expr -> ID .)
    XOR             reduce using rule 48 (expr -> ID .)
    DEFINE          reduce using rule 48 (expr -> ID .)
    BREAK           reduce using rule 48 (expr -> ID .)
    FOR             reduce using rule 48 (expr -> ID .)
    IF              reduce using rule 48 (expr -> ID .)
    ID              reduce using rule 48 (expr -> ID .)
    NOT             reduce using rule 48 (expr -> ID .)
    BITWISE_NOT     reduce using rule 48 (expr -> ID .)
    NUMBER          reduce using rule 48 (expr -> ID .)
    $end            reduce using rule 48 (expr -> ID .)
    RPAREN          reduce using rule 48 (expr -> ID .)
    THEN            reduce using rule 48 (expr -> ID .)
    FI              reduce using rule 48 (expr -> ID .)
    COMMA           reduce using rule 48 (expr -> ID .)
    RBRACE          reduce using rule 48 (expr -> ID .)
    COLON           reduce using rule 48 (expr -> ID .)
    ELSE            reduce using rule 48 (expr -> ID .)
    ELSEIF          reduce using rule 48 (expr -> ID .)
    ENDFOR          reduce using rule 48 (expr -> ID .)

  ! LPAREN          [ reduce using rule 48 (expr -> ID .) ]


state 5

    (47) expr -> LPAREN . expr RPAREN
    (6) expr -> . expr UPDATE expr
    (7) expr -> . expr PLUS_EQUAL expr
    (16) expr -> . ID LPAREN args RPAREN
    (17) expr -> . ID LPAREN RPAREN
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . expr LBRACE expr COLON expr RBRACE
    (22) expr -> . expr QUEST expr COLON expr
    (23) expr -> . NOT expr
    (24) expr -> . MINUS expr
    (25) expr -> . BITWISE_NOT expr
    (26) expr -> . expr BITWISE_AND expr
    (27) expr -> . expr BITWISE_OR expr
    (28) expr -> . expr OP expr
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIV expr
    (33) expr -> . expr MOD expr
    (34) expr -> . expr AND expr
    (35) expr -> . expr OR expr
    (36) expr -> . expr LSHIFT expr
    (37) expr -> . expr RSHIFT expr
    (38) expr -> . expr LSHIFT_LOGICAL expr
    (39) expr -> . expr RSHIFT_LOGICAL expr
    (40) expr -> . expr GREATER expr
    (41) expr -> . expr LESS expr
    (42) expr -> . expr LESS_EQUAL expr
    (43) expr -> . expr GREATER_EQUAL expr
    (44) expr -> . expr EQUAL expr
    (45) expr -> . expr NOT_EQUAL expr
    (46) expr -> . expr XOR expr
    (47) expr -> . LPAREN expr RPAREN
    (48) expr -> . ID
    (49) expr -> . NUMBER

    ID              shift and go to state 4
    NOT             shift and go to state 11
    MINUS           shift and go to state 12
    BITWISE_NOT     shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 9

    expr                           shift and go to state 17

state 6

    (4) stmt -> BREAK .

    DEFINE          reduce using rule 4 (stmt -> BREAK .)
    BREAK           reduce using rule 4 (stmt -> BREAK .)
    FOR             reduce using rule 4 (stmt -> BREAK .)
    IF              reduce using rule 4 (stmt -> BREAK .)
    ID              reduce using rule 4 (stmt -> BREAK .)
    NOT             reduce using rule 4 (stmt -> BREAK .)
    MINUS           reduce using rule 4 (stmt -> BREAK .)
    BITWISE_NOT     reduce using rule 4 (stmt -> BREAK .)
    LPAREN          reduce using rule 4 (stmt -> BREAK .)
    NUMBER          reduce using rule 4 (stmt -> BREAK .)
    $end            reduce using rule 4 (stmt -> BREAK .)
    FI              reduce using rule 4 (stmt -> BREAK .)
    ELSE            reduce using rule 4 (stmt -> BREAK .)
    ELSEIF          reduce using rule 4 (stmt -> BREAK .)
    ENDFOR          reduce using rule 4 (stmt -> BREAK .)


state 7

    (5) stmt -> expr .
    (6) expr -> expr . UPDATE expr
    (7) expr -> expr . PLUS_EQUAL expr
    (20) expr -> expr . LBRACE expr RBRACE
    (21) expr -> expr . LBRACE expr COLON expr RBRACE
    (22) expr -> expr . QUEST expr COLON expr
    (26) expr -> expr . BITWISE_AND expr
    (27) expr -> expr . BITWISE_OR expr
    (28) expr -> expr . OP expr
    (29) expr -> expr . PLUS expr
    (30) expr -> expr . MINUS expr
    (31) expr -> expr . TIMES expr
    (32) expr -> expr . DIV expr
    (33) expr -> expr . MOD expr
    (34) expr -> expr . AND expr
    (35) expr -> expr . OR expr
    (36) expr -> expr . LSHIFT expr
    (37) expr -> expr . RSHIFT expr
    (38) expr -> expr . LSHIFT_LOGICAL expr
    (39) expr -> expr . RSHIFT_LOGICAL expr
    (40) expr -> expr . GREATER expr
    (41) expr -> expr . LESS expr
    (42) expr -> expr . LESS_EQUAL expr
    (43) expr -> expr . GREATER_EQUAL expr
    (44) expr -> expr . EQUAL expr
    (45) expr -> expr . NOT_EQUAL expr
    (46) expr -> expr . XOR expr

  ! shift/reduce conflict for MINUS resolved as shift
    DEFINE          reduce using rule 5 (stmt -> expr .)
    BREAK           reduce using rule 5 (stmt -> expr .)
    FOR             reduce using rule 5 (stmt -> expr .)
    IF              reduce using rule 5 (stmt -> expr .)
    ID              reduce using rule 5 (stmt -> expr .)
    NOT             reduce using rule 5 (stmt -> expr .)
    BITWISE_NOT     reduce using rule 5 (stmt -> expr .)
    LPAREN          reduce using rule 5 (stmt -> expr .)
    NUMBER          reduce using rule 5 (stmt -> expr .)
    $end            reduce using rule 5 (stmt -> expr .)
    FI              reduce using rule 5 (stmt -> expr .)
    ELSE            reduce using rule 5 (stmt -> expr .)
    ELSEIF          reduce using rule 5 (stmt -> expr .)
    ENDFOR          reduce using rule 5 (stmt -> expr .)
    UPDATE          shift and go to state 18
    PLUS_EQUAL      shift and go to state 19
    LBRACE          shift and go to state 20
    QUEST           shift and go to state 21
    BITWISE_AND     shift and go to state 22
    BITWISE_OR      shift and go to state 23
    OP              shift and go to state 24
    PLUS            shift and go to state 25
    MINUS           shift and go to state 26
    TIMES           shift and go to state 27
    DIV             shift and go to state 28
    MOD             shift and go to state 29
    AND             shift and go to state 30
    OR              shift and go to state 31
    LSHIFT          shift and go to state 32
    RSHIFT          shift and go to state 33
    LSHIFT_LOGICAL  shift and go to state 34
    RSHIFT_LOGICAL  shift and go to state 35
    GREATER         shift and go to state 36
    LESS            shift and go to state 37
    LESS_EQUAL      shift and go to state 38
    GREATER_EQUAL   shift and go to state 39
    EQUAL           shift and go to state 40
    NOT_EQUAL       shift and go to state 41
    XOR             shift and go to state 42

  ! MINUS           [ reduce using rule 5 (stmt -> expr .) ]


state 8

    (8) stmt -> FOR . ID IN RANGE LPAREN NUMBER COMMA NUMBER COMMA NUMBER RPAREN COLON stmts ENDFOR

    ID              shift and go to state 43


state 9

    (49) expr -> NUMBER .

    UPDATE          reduce using rule 49 (expr -> NUMBER .)
    PLUS_EQUAL      reduce using rule 49 (expr -> NUMBER .)
    LBRACE          reduce using rule 49 (expr -> NUMBER .)
    QUEST           reduce using rule 49 (expr -> NUMBER .)
    BITWISE_AND     reduce using rule 49 (expr -> NUMBER .)
    BITWISE_OR      reduce using rule 49 (expr -> NUMBER .)
    OP              reduce using rule 49 (expr -> NUMBER .)
    PLUS            reduce using rule 49 (expr -> NUMBER .)
    MINUS           reduce using rule 49 (expr -> NUMBER .)
    TIMES           reduce using rule 49 (expr -> NUMBER .)
    DIV             reduce using rule 49 (expr -> NUMBER .)
    MOD             reduce using rule 49 (expr -> NUMBER .)
    AND             reduce using rule 49 (expr -> NUMBER .)
    OR              reduce using rule 49 (expr -> NUMBER .)
    LSHIFT          reduce using rule 49 (expr -> NUMBER .)
    RSHIFT          reduce using rule 49 (expr -> NUMBER .)
    LSHIFT_LOGICAL  reduce using rule 49 (expr -> NUMBER .)
    RSHIFT_LOGICAL  reduce using rule 49 (expr -> NUMBER .)
    GREATER         reduce using rule 49 (expr -> NUMBER .)
    LESS            reduce using rule 49 (expr -> NUMBER .)
    LESS_EQUAL      reduce using rule 49 (expr -> NUMBER .)
    GREATER_EQUAL   reduce using rule 49 (expr -> NUMBER .)
    EQUAL           reduce using rule 49 (expr -> NUMBER .)
    NOT_EQUAL       reduce using rule 49 (expr -> NUMBER .)
    XOR             reduce using rule 49 (expr -> NUMBER .)
    DEFINE          reduce using rule 49 (expr -> NUMBER .)
    BREAK           reduce using rule 49 (expr -> NUMBER .)
    FOR             reduce using rule 49 (expr -> NUMBER .)
    IF              reduce using rule 49 (expr -> NUMBER .)
    ID              reduce using rule 49 (expr -> NUMBER .)
    NOT             reduce using rule 49 (expr -> NUMBER .)
    BITWISE_NOT     reduce using rule 49 (expr -> NUMBER .)
    LPAREN          reduce using rule 49 (expr -> NUMBER .)
    NUMBER          reduce using rule 49 (expr -> NUMBER .)
    $end            reduce using rule 49 (expr -> NUMBER .)
    RPAREN          reduce using rule 49 (expr -> NUMBER .)
    THEN            reduce using rule 49 (expr -> NUMBER .)
    FI              reduce using rule 49 (expr -> NUMBER .)
    COMMA           reduce using rule 49 (expr -> NUMBER .)
    RBRACE          reduce using rule 49 (expr -> NUMBER .)
    COLON           reduce using rule 49 (expr -> NUMBER .)
    ELSE            reduce using rule 49 (expr -> NUMBER .)
    ELSEIF          reduce using rule 49 (expr -> NUMBER .)
    ENDFOR          reduce using rule 49 (expr -> NUMBER .)


state 10

    (9) stmt -> IF . expr THEN stmts FI
    (10) stmt -> IF . expr THEN stmts ELSE stmts FI
    (11) stmt -> IF . expr FI
    (12) stmt -> IF . expr THEN stmts ELSEIF expr THEN stmts ELSE stmts FI
    (13) stmt -> IF . expr stmts FI
    (14) stmt -> IF . expr stmts ELSE stmts FI
    (15) stmt -> IF . expr stmts ELSE stmts
    (6) expr -> . expr UPDATE expr
    (7) expr -> . expr PLUS_EQUAL expr
    (16) expr -> . ID LPAREN args RPAREN
    (17) expr -> . ID LPAREN RPAREN
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . expr LBRACE expr COLON expr RBRACE
    (22) expr -> . expr QUEST expr COLON expr
    (23) expr -> . NOT expr
    (24) expr -> . MINUS expr
    (25) expr -> . BITWISE_NOT expr
    (26) expr -> . expr BITWISE_AND expr
    (27) expr -> . expr BITWISE_OR expr
    (28) expr -> . expr OP expr
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIV expr
    (33) expr -> . expr MOD expr
    (34) expr -> . expr AND expr
    (35) expr -> . expr OR expr
    (36) expr -> . expr LSHIFT expr
    (37) expr -> . expr RSHIFT expr
    (38) expr -> . expr LSHIFT_LOGICAL expr
    (39) expr -> . expr RSHIFT_LOGICAL expr
    (40) expr -> . expr GREATER expr
    (41) expr -> . expr LESS expr
    (42) expr -> . expr LESS_EQUAL expr
    (43) expr -> . expr GREATER_EQUAL expr
    (44) expr -> . expr EQUAL expr
    (45) expr -> . expr NOT_EQUAL expr
    (46) expr -> . expr XOR expr
    (47) expr -> . LPAREN expr RPAREN
    (48) expr -> . ID
    (49) expr -> . NUMBER

    ID              shift and go to state 4
    NOT             shift and go to state 11
    MINUS           shift and go to state 12
    BITWISE_NOT     shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 9

    expr                           shift and go to state 44

state 11

    (23) expr -> NOT . expr
    (6) expr -> . expr UPDATE expr
    (7) expr -> . expr PLUS_EQUAL expr
    (16) expr -> . ID LPAREN args RPAREN
    (17) expr -> . ID LPAREN RPAREN
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . expr LBRACE expr COLON expr RBRACE
    (22) expr -> . expr QUEST expr COLON expr
    (23) expr -> . NOT expr
    (24) expr -> . MINUS expr
    (25) expr -> . BITWISE_NOT expr
    (26) expr -> . expr BITWISE_AND expr
    (27) expr -> . expr BITWISE_OR expr
    (28) expr -> . expr OP expr
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIV expr
    (33) expr -> . expr MOD expr
    (34) expr -> . expr AND expr
    (35) expr -> . expr OR expr
    (36) expr -> . expr LSHIFT expr
    (37) expr -> . expr RSHIFT expr
    (38) expr -> . expr LSHIFT_LOGICAL expr
    (39) expr -> . expr RSHIFT_LOGICAL expr
    (40) expr -> . expr GREATER expr
    (41) expr -> . expr LESS expr
    (42) expr -> . expr LESS_EQUAL expr
    (43) expr -> . expr GREATER_EQUAL expr
    (44) expr -> . expr EQUAL expr
    (45) expr -> . expr NOT_EQUAL expr
    (46) expr -> . expr XOR expr
    (47) expr -> . LPAREN expr RPAREN
    (48) expr -> . ID
    (49) expr -> . NUMBER

    ID              shift and go to state 4
    NOT             shift and go to state 11
    MINUS           shift and go to state 12
    BITWISE_NOT     shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 9

    expr                           shift and go to state 45

state 12

    (24) expr -> MINUS . expr
    (6) expr -> . expr UPDATE expr
    (7) expr -> . expr PLUS_EQUAL expr
    (16) expr -> . ID LPAREN args RPAREN
    (17) expr -> . ID LPAREN RPAREN
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . expr LBRACE expr COLON expr RBRACE
    (22) expr -> . expr QUEST expr COLON expr
    (23) expr -> . NOT expr
    (24) expr -> . MINUS expr
    (25) expr -> . BITWISE_NOT expr
    (26) expr -> . expr BITWISE_AND expr
    (27) expr -> . expr BITWISE_OR expr
    (28) expr -> . expr OP expr
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIV expr
    (33) expr -> . expr MOD expr
    (34) expr -> . expr AND expr
    (35) expr -> . expr OR expr
    (36) expr -> . expr LSHIFT expr
    (37) expr -> . expr RSHIFT expr
    (38) expr -> . expr LSHIFT_LOGICAL expr
    (39) expr -> . expr RSHIFT_LOGICAL expr
    (40) expr -> . expr GREATER expr
    (41) expr -> . expr LESS expr
    (42) expr -> . expr LESS_EQUAL expr
    (43) expr -> . expr GREATER_EQUAL expr
    (44) expr -> . expr EQUAL expr
    (45) expr -> . expr NOT_EQUAL expr
    (46) expr -> . expr XOR expr
    (47) expr -> . LPAREN expr RPAREN
    (48) expr -> . ID
    (49) expr -> . NUMBER

    ID              shift and go to state 4
    NOT             shift and go to state 11
    MINUS           shift and go to state 12
    BITWISE_NOT     shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 9

    expr                           shift and go to state 46

state 13

    (25) expr -> BITWISE_NOT . expr
    (6) expr -> . expr UPDATE expr
    (7) expr -> . expr PLUS_EQUAL expr
    (16) expr -> . ID LPAREN args RPAREN
    (17) expr -> . ID LPAREN RPAREN
    (20) expr -> . expr LBRACE expr RBRACE
    (21) expr -> . expr LBRACE expr COLON expr RBRACE
    (22) expr -> . expr QUEST expr COLON expr
    (23) expr -> . NOT expr
    (24) expr -> . MINUS expr
    (25) expr -> . BITWISE_NOT expr
    (26) expr -> . expr BITWISE_AND expr
    (27) expr -> . expr BITWISE_OR expr
    (28) expr -> . expr OP expr
    (29) expr -> . expr PLUS expr
    (30) expr -> . expr MINUS expr
    (31) expr -> . expr TIMES expr
    (32) expr -> . expr DIV expr
    (33) expr -> . expr MOD expr
    (34) expr -> . expr AND expr
    (35) expr -> . expr OR expr
    (36) expr -> . expr LSHIFT expr
    (37) expr -> . expr RSHIFT expr
    (38) expr -> . expr LSHIFT_LOGICAL expr
    (39) expr -> . expr RSHIFT_LOGICAL expr
    (40) expr -> . expr GREATER expr
    (41) expr -> . expr LESS expr
    (42) expr -> . expr LESS_EQUAL expr
    (43) expr -> . expr GREATER_EQUAL expr
    (44) expr -> . expr EQUAL expr
    (45) expr -> . expr NOT_EQUAL expr
    (46) expr -> . expr XOR expr
    (47) expr -> . LPAREN expr RPAREN
    (48) expr -> . ID
    (49) expr -> . NUMBER

    ID              shift and go to state 4
    NOT             shift and go to state 11
    MINUS           shift and go to state 12
    BITWISE_NOT     shift and go to state 13
    LPAREN          shift and go to state 5
    NUMBER          shift and go to state 9

    expr                           shift and go to state 47

state 14

    (2) stmts -> stmts stmt .

    DEFINE          reduce using rule 2 (stmts -> stmts stmt .)
    BREAK           reduce using rule 2 (stmts -> stmts stmt .)
    FOR             reduce using rule 2 (stmts -> stmts stmt .)
    IF              reduce using rule 2 (stmts -> stmts stmt .)
    ID              reduce using rule 2 (stmts -> stmts stmt .)
    NOT             reduce using rule 2 (stmts -> stmts stmt .)
    MINUS           reduce using rule 2 (stmts -> stmts stmt .)
    BITWISE_NOT     reduce using rule 2 (stmts -> stmts stmt .)
    LPAREN          reduce using rule 2 (stmts -> stmts stmt .)
    NUMBER          reduce using rule 2 (stmts -> stmts stmt .)
    $end            reduce using rule 2 (stmts -> stmts stmt .)
    FI              reduce using rule 2 (stmts -> stmts stmt .)
    ELSE            reduce using rule 2 (stmts -> stmts stmt .)
    ELSEIF          reduce using rule 2 (stmts -> stmts stmt .)
    ENDFOR          reduce using rule 2 (stmts -> stmts stmt .)


state 15

    (3) stmt -> DEFINE ID . LPAREN args RPAREN COLON stmts

    LPAREN          shift and go to state 48


state 16
